--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -108,15 +108,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Dungeon.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\MainGame.cpp" />
-    <ClCompile Include="src\Maze.cpp" />
     <ClCompile Include="src\Player.cpp" />
+    <ClCompile Include="src\Rectangle.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Dungeon.h" />
     <ClInclude Include="src\MainGame.h" />
-    <ClInclude Include="src\Maze.h" />
     <ClInclude Include="src\Player.h" />
+    <ClInclude Include="src\Rectangle.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
