--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -120,6 +120,8 @@
     <ClInclude Include="src\Items\Gun.h" />
     <ClInclude Include="src\Items\Inventory.h" />
     <ClInclude Include="src\Items\Item.h" />
+    <ClInclude Include="src\MainGame.h" />
+    <ClInclude Include="src\Rectangle.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Dungeon\Dungeon.cpp" />
@@ -133,6 +135,9 @@
     <ClCompile Include="src\Items\Gun.cpp" />
     <ClCompile Include="src\Items\Inventory.cpp" />
     <ClCompile Include="src\Items\Item.cpp" />
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\MainGame.cpp" />
+    <ClCompile Include="src\Rectangle.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
